# spotify-playlist-renamer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vagrantfile  bootstrap.sh  cron_script.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: actions.yaml
app/: Dockerfile  main.py
clusters/production/flux-system/: gotk-sync.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  cronjob.yaml  namespace.yaml  networkpolicy.yaml  pv.yaml  pvc.yaml
vagrant/: Vagrantfile  bootstrap.sh
