[tool.poetry]
name = "spotify-playlist-renamer"
version = "0.1.0"
description = ""
authors = ["Matt Andersen <mattandersen0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
spotipy = "^2.19.0"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
